--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Local .terraform directories
 **/.terraform/*
-
+personal_access_token.txt
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -32,3 +32,4 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+.terraform.lock.hcl
